@@ -84,7 +84,7 @@ person_mapping = (\n
     (\'default_telephone_text\', \'default_telephone_text\'),\n
     (\'default_mobile_telephone_text\', \'default_mobile_telephone_text\'),\n
     (\'default_email_text\', \'default_email_text\'),\n
-    (\'start_date\', \'start_date\'),\n
+    (\'date_of_birth\', \'start_date\'),\n
     (\'nationality\', \'nationality\'),\n
     (\'skill_list\', \'default_career_skill_list\'),\n
     (\'activity_list\', \'default_career_activity_list\'),\n
