@@ -61,7 +61,6 @@ person_mapping = (\n
     (\'first_name\', \'first_name\'),\n
     (\'last_name\', \'last_name\'),\n
     (\'gender\', \'gender\'),\n
-    (\'birthday\', \'birthday\'),\n
     (\'date_of_birth\', \'birthday\'),\n
     (\'nationality\', \'nationality\'),\n
     (\'default_email_text\', \'default_email_text\'),\n
