@@ -86,7 +86,6 @@ credential_request = module.newContent(\n
                 site=site,\n
                 activity_list=activity_list,\n
                 corporate_name=corporate_name,\n
-                birthday=birthday,\n
                 date_of_birth=date_of_birth)\n
 \n
 credential_request.setCategoryList(category_list)\n
@@ -134,7 +133,7 @@ return portal.Base_redirect(form_id=\'login_form\', \n
         </item>
         <item>
             <key> <string>_params</string> </key>
-            <value> <string>reference, default_email_text, first_name=None, last_name=None, password=None, birthday=None, date_of_birth=None, default_telephone_text=None, default_mobile_telephone_text=None, default_fax_text=None, corporate_name=None, default_credential_question_question=None, default_credential_question_question_free_text=None, default_credential_question_answer=None,  role_list=None, function=None, site=None, activity_list=None, default_address_city=None, default_address_street_address=None, default_address_zip_code=None,default_address_region=None, dialog_id=\'\', **kw</string> </value>
+            <value> <string>reference, default_email_text, first_name=None, last_name=None, password=None, date_of_birth=None, default_telephone_text=None, default_mobile_telephone_text=None, default_fax_text=None, corporate_name=None, default_credential_question_question=None, default_credential_question_question_free_text=None, default_credential_question_answer=None,  role_list=None, function=None, site=None, activity_list=None, default_address_city=None, default_address_street_address=None, default_address_zip_code=None,default_address_region=None, dialog_id=\'\', **kw</string> </value>
         </item>
         <item>
             <key> <string>id</string> </key>
