@@ -79,7 +79,6 @@ else:\n
     function=function,\n
     activity_list=activity_list,\n
     skill_list=skill_list,\n
-    birthday=birthday,\n
     date_of_birth=date_of_birth,\n
     destination_decision=person.getRelativeUrl(),\n
     default_image_file=default_image_file,\n
@@ -105,7 +104,7 @@ portal.Base_redirect(keep_items = {\'portal_status_message\': portal_status_mess
         </item>
         <item>
             <key> <string>_params</string> </key>
-            <value> <string>default_email_text=None, last_name=None, first_name=None, gender=None, nationality=None, password=None, birthday=None, date_of_birth=None, default_telephone_text=None, default_mobile_telephone_text=None, default_fax_text=None, default_credential_question_question=None, default_credential_question_question_free_text=None, default_credential_question_answer=None,  function=None, activity_list=None, skill_list=None, default_address_city=None, default_address_street_address=None, default_address_zip_code=None,default_address_region=None,default_image_file=None, description=None, dialog_id=\'\', **kw</string> </value>
+            <value> <string>default_email_text=None, last_name=None, first_name=None, gender=None, nationality=None, password=None, date_of_birth=None, default_telephone_text=None, default_mobile_telephone_text=None, default_fax_text=None, default_credential_question_question=None, default_credential_question_question_free_text=None, default_credential_question_answer=None,  function=None, activity_list=None, skill_list=None, default_address_city=None, default_address_street_address=None, default_address_zip_code=None,default_address_region=None,default_image_file=None, description=None, dialog_id=\'\', **kw</string> </value>
         </item>
         <item>
             <key> <string>id</string> </key>
